FIND_PACKAGE(IODBC 3.52)

ADD_SUBDIRECTORY (Util)
ADD_SUBDIRECTORY (NMXml)
ADD_SUBDIRECTORY (AtomSpace)
ADD_SUBDIRECTORY (query)
ADD_SUBDIRECTORY (dynamics)

IF (IODBC_FOUND)
	ADD_SUBDIRECTORY (persist)
ENDIF (IODBC_FOUND)

ADD_SUBDIRECTORY (nlp)

ADD_SUBDIRECTORY (CogServer)
ADD_SUBDIRECTORY (examples)
